--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+            <img src="img/GLStudio.png" alt="Global labs icone" width="220" height="80">
+        </a>
+        <div class="collapse navbar-collapse" id="navbarText">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link href="#">Quem somos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link href="#">Parceiros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link href="#">Serviços</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <section id="quem-somos">
+        <div class="container-center quem-somos text-center">
+            <p>Texto</p>
+        </div>
+    </section>
 </body>
 </html>
