--- a/index.html
+++ b/index.html
@@ -16,22 +16,63 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link href="#">Quem somos</a>
+                    <a class="nav-link" href="#quem-somos">Quem somos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link href="#">Parceiros</a>
+                    <a class="nav-link" href="#parceiros">Parceiros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link href="#">Serviços</a>
+                    <a class="nav-link" href="#servicos">Serviços</a>
                 </li>
             </ul>
         </div>
     </nav>
 
     <section id="quem-somos">
-        <div class="container-center quem-somos text-center">
-            <p>Texto</p>
+        <div class="container-center quem-somos text-center margin">
+            <h3>Quem somos</h3>
+            <img src="img/devs.jpg" alt="Grupo de desenvolvedores" width="400" height="400" class="rounded-circle">
+            <h3>Somos um time comprometido com os resultados</h3>
         </div>
     </section>
+
+    <section id="parceiros">
+        <div class="container-center parceiros text-center margin">
+            <h3>Parceiros</h3>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <img src="img/logo-sm-white.png" alt="Parceiro digital inovation" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/logo-sm-white.png" alt="Parceiro digital inovation" width="100%">
+                    </div>
+                    <div class="col-lg-4">
+                        <img src="img/logo-sm-white.png" alt="Parceiro digital inovation" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="servicos">
+        <div class="container-center servicos text-center margin">
+            <h3>Serviços</h3>
+            <div class="container margin">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <img src="img/pexels-pixabay-267389.jpg" alt="Desenvolvimento Mobile" width="100%">
+                    </div>
+                    <div class="col-lg-6">
+                        <img src="img/pexels-pixabay-270360.jpg" alt="Desenvolvimento Desktop" width="100%">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="text-center">
+        <p>Desenvolvido por java batista</p>
+    </footer>
 </body>
 </html>
